--- a/src/app/ui/globals.css
+++ b/src/app/ui/globals.css
@@ -3,24 +3,30 @@
 @tailwind utilities;
 
 :root {
-  --bg: black;
-  --bgSoft: rgb(32, 32, 32);
-  --text: white;
-  --textSoft: rgb(194, 194, 194);
+    --bg: black;
+    --bgSoft: rgb(32, 32, 32);
+    --text: white;
+    --textSoft: rgb(194, 194, 194);
 }
 
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 body {
-  background-color: var(--bg);
-  color: var(--text);
+    background-color: var(--bg);
+    color: var(--text);
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+    color: inherit;
+    text-decoration: none;
+}
+
+.section-container {
+    background-color: #1a2c3d;
+    border-radius: 0.5rem;
+    padding: 1rem;
 }
