--- a/src/app/ui/globals.css
+++ b/src/app/ui/globals.css
@@ -30,3 +30,28 @@ a {
     border-radius: 0.5rem;
     padding: 1rem;
 }
+
+.btn-yellow {
+    padding: 0.625rem 0.75rem;
+    color: black;
+    background-color: #f2ca16;
+    border-radius: 0.25rem;
+    font-weight: 700;
+}
+.btn-yellow:hover {
+    background-color: #ebcb48;
+}
+
+.btn-transparent-white {
+    padding: 6px 14px;
+    color: white;
+    background-color: none;
+    border-radius: 4px;
+    font-weight: 500;
+    border: 1px solid white;
+}
+.btn-transparent-white:hover {
+    background-color: #f2ca16;
+    color: black;
+    font-weight: 700;
+}
