--- a/src/app/ui/globals.css
+++ b/src/app/ui/globals.css
@@ -3,104 +3,110 @@
 @tailwind utilities;
 
 :root {
-    --bg: black;
-    --bgSoft: rgb(32, 32, 32);
-    --text: white;
-    --textSoft: rgb(194, 194, 194);
+  --bg: black;
+  --bgSoft: rgb(32, 32, 32);
+  --text: white;
+  --textSoft: rgb(194, 194, 194);
+  --pagination-color-dark: #ffffff;
+  --pagination-active-bg-dark: #f2ca16;
+  --pagination-hover-bg-dark: #f2ca16ab;
+  --pagination-hover-color-dark: #000000;
+  --pagination-active-color-dark: #000000;
+  --pagination-bg-dark: #13202d;
 }
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    background-color: var(--bg);
-    color: var(--text);
+  background-color: var(--bg);
+  color: var(--text);
 }
 
 a {
-    color: inherit;
-    text-decoration: none;
+  color: inherit;
+  text-decoration: none;
 }
 
 .section-container {
-    background-color: #1a2c3d;
-    border-radius: 0.5rem;
-    padding: 1rem;
+  background-color: #1a2c3d;
+  border-radius: 0.5rem;
+  padding: 1rem;
 }
 
 .btn-yellow {
-    padding: 0.625rem 0.75rem;
-    color: black;
-    background-color: #f2ca16;
-    border-radius: 0.25rem;
-    font-weight: 700;
+  padding: 0.625rem 0.75rem;
+  color: black;
+  background-color: #f2ca16;
+  border-radius: 0.25rem;
+  font-weight: 700;
 }
 .btn-yellow:hover {
-    background-color: #ebcb48;
+  background-color: #ebcb48;
 }
 
 .btn-white {
-    padding: 0.625rem 0.75rem;
-    color: black;
-    background-color: white;
-    border-radius: 0.25rem;
-    font-weight: 700;
+  padding: 0.625rem 0.75rem;
+  color: black;
+  background-color: white;
+  border-radius: 0.25rem;
+  font-weight: 700;
 }
 .btn-white:hover {
-    background-color: #ebcb48;
+  background-color: #ebcb48;
 }
 
 .btn-transparent-white {
-    padding: 6px 14px;
-    color: white;
-    background-color: none;
-    border-radius: 4px;
-    font-weight: 500;
-    border: 1px solid white;
+  padding: 6px 14px;
+  color: white;
+  background-color: none;
+  border-radius: 4px;
+  font-weight: 500;
+  border: 1px solid white;
 }
 .btn-transparent-white:hover {
-    background-color: #f2ca16;
-    color: black;
-    font-weight: 700;
+  background-color: #f2ca16;
+  color: black;
+  font-weight: 700;
 }
 
 .btn-transparent-red {
-    padding: 6px 14px;
-    color: #c2451e;
-    background-color: none;
-    border-radius: 4px;
-    font-weight: 500;
-    border: 1px solid #c2451e;
+  padding: 6px 14px;
+  color: #c2451e;
+  background-color: none;
+  border-radius: 4px;
+  font-weight: 500;
+  border: 1px solid #c2451e;
 }
 .btn-transparent-red:hover {
-    background-color: #c2451e;
-    color: black;
-    font-weight: 700;
+  background-color: #c2451e;
+  color: black;
+  font-weight: 700;
 }
 
 .btn-gray {
-    padding: 0.625rem 0.75rem;
-    color: black;
-    background-color: #dce0d9;
-    border-radius: 0.25rem;
-    font-weight: 700;
+  padding: 0.625rem 0.75rem;
+  color: black;
+  background-color: #dce0d9;
+  border-radius: 0.25rem;
+  font-weight: 700;
 }
 
 /* ANIMATIONS */
 
 .dropdown_menu-6 {
-    animation: growDown 500ms ease-in-out forwards;
-    transform-origin: top center;
+  animation: growDown 500ms ease-in-out forwards;
+  transform-origin: top center;
 }
 
 @keyframes growDown {
-    from {
-        transform: scaleY(0);
-    }
-    to {
-        transform: scaleY(1);
-    }
+  from {
+    transform: scaleY(0);
+  }
+  to {
+    transform: scaleY(1);
+  }
 }
